--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: homepage
     
 {% include header.html %}
 {% include info.html %}
-
+{% include social %}
+{% include council %}
 {% include footer.html %}
     
