--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: homepage
     
 {% include header.html %}
 {% include info.html %}
-
+{% include main.html %}
 {% include social %}
 {% include council %}
 {% include footer.html %}
