--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ title: homepage
 {% include info.html %}
 {% include main.html %}
 {% include social %}
-{% include council %}
+{% include aboutus %}
 {% include footer.html %}
     
