--- a/search.html
+++ b/search.html
@@ -4,11 +4,12 @@ permalink:
 ---
 
 {% include header.html %}
+</br>
 <center><h1>Market Research</h1></center>
-{% include herobox %}
+{% include heroboxwide %}
 {% include searchwidget %}
 <div class="clearfix">
-<ul id="main">{% include articles %} </br> {% include faqs %} </br> <h3>Useful Links</h3></br> <h3>Join My Export</h3></ul>
+<ul id="main">{% include tabs %} </br> {% include faqs %} </br>{% include events %} </br><a href="/guide.html">View All Events</a> </br> <h3>Useful Links</h3></br> {% include join %} </ul>
 <ul id="main"><h3>Browse Articles By ...</h3></ul>
  </div>
 {% include footer.html %}
