--- a/guide.html
+++ b/guide.html
@@ -13,7 +13,7 @@ permalink:
  
  <div class="clearfix">
 <ul id="main">{% include faqs %} </ul>
-<ul id="main"><h3>Useful Links</h3></br> <h3>Join My Export</h3></ul>
+<ul id="main">{% include resources %}</br> {% include join %}</ul>
  </div>
 {% include footer.html %}
 
