--- a/homepage.html
+++ b/homepage.html
@@ -5,8 +5,9 @@ permalink:
 
 {% include header.html %}
 </br>
-{% include herobox %}
-<h3>Attend an Upcoming Trade Event</h3>
+{% include heroboxwide %}
+<h3>Attend Upcoming</h3>
 {% include events %}
 {% include webinar %}
+{% include success %}	{% include join %}
 {% include footer.html %}
