--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ title: homepage
 ---
     
 {% include header.html %}
-{% include info.html %}
-{% include main.html %}
-{% include social %}
-{% include aboutus %}
+</br>
+{% include heroboxwide %}
+<h3>Attend Upcoming</h3>
+{% include events %}
+{% include webinar %}
+{% include success %}	{% include join %}
 {% include footer.html %}
-    
