--- a/article.html
+++ b/article.html
@@ -5,7 +5,7 @@ permalink:
 
 {% include header.html %}
 <div class="clearfix">
-<ul id="main">
+<ul id="main" style="width:600px">
  
 <!doctype html>
 <html>
@@ -28,7 +28,7 @@ permalink:
 <dl class="article4">
     <h3><dd class="title"></dd></h3>
    <dd class="content"></dd></br>
-	<dd class="update_date"></dd></br></br>        
+	<strong><dd class="update_date"></dd></strong></br></br>        
 </dl>
 </div>
 
@@ -69,6 +69,6 @@ permalink:
   </body>
 </html>
 </ul>
-<ul id="main"><h3>Related Articles</h3> </br><h3>Related Markets</h3> </ul>
+<ul id="main" style="width:250px"><h3>Related Articles</h3> </br><h3>Related Markets</h3> </ul>
  </div>
  {% include footer.html %}
