--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@ permalink:
 {% include heroboxwide %}
 {% include searchwidget %}
 <div class="clearfix">
-<ul id="main">{% include tabs %} </br> {% include faqs %} </br>{% include events %} </br><a href="/guide.html">View All Events</a> </br> {% include resources %}</br> {% include join %} </ul>
-<ul id="main"><h3>Browse Articles By ...</h3></ul>
+<ul id="main" style="width:600px">{% include tabs %} </br> {% include faqs %} </br>{% include events %} </br><a href="/guide.html">View All Events</a> </br> {% include resources %}</br> {% include join %} </ul>
+<ul id="main" style="width:250px"><h3>Browse Articles By ...</h3></ul>
  </div>
 {% include footer.html %}
