--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ title: homepage
 
     
 {% include header.html %}
-</br>
+
 {% include heroboxhome %}</br>
 {% include eventshome %}
 {% include webinar %}
 <div class="clearfix">
 <ul id="main">{% include success %} </ul>
-<ul id="main">{% include join %} </ul>
+<ul id="main" style="background-color:transparent;">{% include join %} </ul>
  </div>
 {% include footer.html %}
