--- a/article.html
+++ b/article.html
@@ -69,6 +69,9 @@ permalink:
   </body>
 </html>
 </ul>
-<ul id="main" style="width:250px"><h3>Related Articles</h3> </br><h3>Related Markets</h3> </ul>
+<ul id="main" style="width:250px"><h3>Related Articles</h3> <a href="#">ATA Carnet and Temporary Imports</a><a href="#">Consultants/Ordering Standards</a></br><h3>Related Markets</h3><a href="#">NATO Procurement process</a> <a href="#">U.S. Food Processing and Packaging Equipment 2011</a></ul>
  </div>
  {% include footer.html %}
+ 
+ 
+ 
