--- a/guide.html
+++ b/guide.html
@@ -4,15 +4,14 @@ permalink:
 ---
 
 {% include header.html %}
-
 <center><h1>CE Marking Guide</h1></center>
 <div class="clearfix">
 <ul id="main">{% include aboutus %} </ul>
-<ul id="main">{% include articles %} </ul>
+<ul id="main">{% include articles2 %} </br><a href="/office/articlelist.html">View All Articles</a> </ul>
  </div>
  
  <div class="clearfix">
-<ul id="main">{% include faqs %} </ul>
+<ul id="main">{% include faqs %} <a href="/office/faqs.html">View All FAQs</a></ul>
 <ul id="main">{% include resources %}</br> {% include join %}</ul>
  </div>
 {% include footer.html %}
