--- a/article.html
+++ b/article.html
@@ -4,6 +4,8 @@ permalink:
 ---
 
 {% include header.html %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 <div class="clearfix">
 <ul id="main" style="width:600px">
  
