--- a/guide.html
+++ b/guide.html
@@ -4,6 +4,8 @@ permalink:
 ---
 
 {% include header.html %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 <center><h1>CE Marking Guide</h1></center>
 <div class="clearfix">
 <ul id="main">{% include aboutus %} </ul>
