--- a/search.html
+++ b/search.html
@@ -4,7 +4,8 @@ permalink:
 ---
 
 {% include header.html %}
-
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 <center><h1>Market Research</h1></center>
 {% include heroboxwide %}
 {% include searchwidget %}
