--- a/events.html
+++ b/events.html
@@ -4,5 +4,7 @@ permalink:
 ---
 
 {% include header.html %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 {% include allevents %}
 {% include footer.html %}
