--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: homepage
     
 {% include header.html %}
 
-{% include heroboxhome %}
+{% include heroboxhome %}</br></br>
 {% include eventshome %}
 {% include webinar %}
 <div class="clearfix">
