--- a/article.html
+++ b/article.html
@@ -71,7 +71,7 @@ permalink:
   </body>
 </html>
 </ul>
-<ul id="main" style="width:250px"><h3>Related Articles</h3> <a href="#">ATA Carnet and Temporary Imports</a><a href="#">Consultants/Ordering Standards</a></br><h3>Related Markets</h3><a href="#">NATO Procurement process</a> <a href="#">U.S. Food Processing and Packaging Equipment 2011</a></ul>
+<ul id="main" style="width:250px"><h3>Related Articles</h3> <a href="#">ATA Carnet and Temporary Imports</a><a href="#">Consultants/Ordering Standards</a></br><h3>Related Markets</h3><a href="#">NATO Procurement process</a> <a href="#">U.S. Food Processing and Packaging Equipment 2011</a></br></br><a href="/office/articlelist.html">View All Articles</a></ul>
  </div>
  {% include footer.html %}
  
