--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@ title: homepage
 
     
 {% include header.html %}
-
-{% include heroboxhome %}</br></br>
-{% include eventshome %}
+{% include heroboxhome %}
+{% include heroboxwide %}
 {% include webinar %}
-<div class="clearfix">
-<ul id="main">{% include success %} </ul>
-<ul id="main" style="background-color:transparent;">{% include join %} </ul>
- </div>
 {% include footer.html %}
