--- a/office.html
+++ b/office.html
@@ -4,8 +4,9 @@ permalink:
 ---
 
 {% include header.html %}
-{% include info.html %}
-{% include main.html %}
-{% include social %}
-{% include aboutus %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+{% include title %}      
+{% include heroboxhome %}
+{% include maintype %}
 {% include footer.html %}
