--- a/mrr.html
+++ b/mrr.html
@@ -1,12 +1,10 @@
 ---
-Title: Video list
+Title: MRR
 permalink: 
 ---
 
 {% include header.html %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-      
-      <h3>Training Videos & Webinars</h3>
-{% include thumb %}
+{% include mrr %}
 {% include footer.html %}
