--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@ title: homepage
     
 {% include header.html %}
 {% include heroboxhome %}
-{% include heroboxwide %}
-{% include webinar %}
+<div class="clearfix">
+<ul id="main"><p><img  src="images/eventicon.png" width="20px"> CONEXPO-CON/AGG 2014 - 2014-03-04</p>
+<p><img  src="images/eventicon.png" width="20px"> Feria Internacional de Franquicias 2014 - 2014-03-06</p>
+<p><img  src="images/eventicon.png" width="20px"> Natural Products Expo West 2014 - 2014-03-06</p>
+<p><img  src="images/eventicon.png" width="20px"> 2014 Spring OH! Student International Education Expo - 2014-03-08</p></ul>
+<ul id="main">{% include social %}</ul>
+</div>
 {% include footer.html %}
