--- a/search.html
+++ b/search.html
@@ -3,14 +3,5 @@ Title: Search Toolkit
 permalink: 
 ---
 
-{% include header.html %}
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-<center><h1>Market Research</h1></center>
-{% include heroboxwide %}
-{% include searchwidget %}
-<div class="clearfix">
-<ul id="main" style="width:750px">{% include tabs %} {% include faqs %} <a href="/office/faqs.html">View All FAQs</a></br>{% include events %} </br><a href="/office/events.html">View All Events</a> </br> {% include resources %}</br> {% include join %} </ul>
-<ul id="main" style="width:100px">Browse Articles By ...</br><a>evergreen</a></br><a>industry</a></br><a>topic</a></br><a>subtopic</a></br><a>trade region</a></ul>
- </div>
-{% include footer.html %}
+{% include faqshome %}
+
