--- a/index.html
+++ b/index.html
@@ -6,4 +6,16 @@ title: homepage
     
 {% include header.html %}
 {% include heroboxhome %}
+<div class="clearfix">
+<ul id="main4" style="width:600px;margin-left: 75px;">
+{% include eventshome %}
+</ul>
+<ul id="main4" style="width:350px;">
+{% include social %}
+</ul>
+</div>
+<div class="clearfix">
+<ul id="main2">{% include success %}</ul>
+<ul id="main2">{% include faqshome %}</ul>
+</div>
 {% include footer.html %}
