--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@ title: homepage
 {% include header.html %}
 {% include heroboxhome %}
 <div class="clearfix">
-<ul id="main4" style="width:600px;margin-left: 75px;">
+<ul id="main4" style="width:600px;">
 {% include eventshome %}
 </ul>
-<ul id="main4" style="width:350px;">
+<ul id="main4" style="width:400px;">
 {% include social %}
 </ul>
 </div>
-<div class="clearfix">
-<ul id="main2">{% include success %}</ul>
+<div class="clearfix" style="margin-bottom:25px;">
+<ul id="main2" style="width:500px;margin-right: 100px;">{% include success %}</ul>
 <ul id="main2">{% include faqshome %}</ul>
 </div>
 {% include footer.html %}
