--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: homepage
 {% include header.html %}
 {% include heroboxhome %}
 <div class="clearfix">
-<ul id="main4" style="width:600px;">
+<ul id="main4" style="width:600px;margin-right: 50px;">
 {% include eventshome %}
 </ul>
 <ul id="main4" style="width:400px;">
@@ -15,7 +15,7 @@ title: homepage
 </ul>
 </div>
 <div class="clearfix" style="margin-bottom:25px;">
-<ul id="main2" style="width:500px;margin-right: 100px;">{% include success %}</ul>
+<ul id="main2" style="width:500px;margin-right: 150px;">{% include success %}</ul>
 <ul id="main2">{% include faqshome %}</ul>
 </div>
 {% include footer.html %}
