--- a/office.html
+++ b/office.html
@@ -5,15 +5,13 @@ permalink:
 
 {% include header.html %}
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" style="margin-top:0px;"class="outer">
+    <div id="main_content_wrap" style="margin-top:-10px;"class="outer">
       
-
-{% include title %}
 {% include heroboxoffice %}
 <div class="clearfix" >
-<ul id="main" style="width:200px;margin-right:75px;"><h4>Export Resources</h4>
+<ul id="main" style="width:200px;margin-right:300px;"><h4>Export Resources</h4>
  
-<ul> 
+<ul style="font-size: 18px;"> 
 <li><a href="#">Exporters Resource Database</a></li>
 <li><a href="#">International Finance</a></li>
 <li><a href="#">Certificate of Origin</a></li>
@@ -22,12 +20,28 @@ permalink:
 </ul>
 </ul>
 
-<ul id="main" style="width:600px;">
-{% include eventshome %}
+<ul id="main" ">
+{% include eventsoffice %}
 </ul>
 </div>
 
+<div class="clearfix" >
+<ul id="main" style="margin-right:100px;">{% include faqshome %}</ul>
+<ul id="main" >
+{% include articles2 %}
+
+
+</br></br>
+<h4>Our Global Network at Work</h4>
+
+<ul> 
+<li>Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
+<li>Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
+<li>See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
+</ul></ul>
+</div>
 
 </section>
 </div>
+{% include promo %}
 {% include footer.html %}
