--- a/search.html
+++ b/search.html
@@ -2,6 +2,5 @@
 Title: Search Toolkit 
 permalink: 
 ---
-
-{% include socailbar %}
+<span style="display: inline-block; width: 300px; height: 300px;"><span style="position: relative; display: inline-block; width: 300px; height: 300px"><i style="position: absolute;display:inline-block;width:2.5384615384615388em;height:0.9230769230769231em;background-color:#0b5394;left:0em;top:0em"></i><i style="position: absolute;display:inline-block;width:0;height:0;line-height:0;border:0.46153846153846156em solid transparent;border-left:0.46153846153846156em solid #0b5394;left:2.5384615384615388em;top:0em"></i></span></span>
 
