--- a/office.html
+++ b/office.html
@@ -5,7 +5,7 @@ permalink:
 
 {% include header.html %}
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" style="margin-top:-10px;"class="outer">
+    <div id="main_content_wrap" class="outer">
       
 {% include heroboxoffice %}
 <div class="clearfix" >
