--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@ title: homepage
     
 {% include header.html %}
 {% include heroboxhome %}
+{% include tabshome %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 <div class="clearfix">
 <ul id="main4" style="width:600px;margin-right: 50px;">
 {% include eventshome %}
