--- a/searchtoolkit.html
+++ b/searchtoolkit.html
@@ -1,18 +1,13 @@
 ---
-Title: office
+Title: Toolkit 
 permalink: 
 ---
 
 {% include header.html %}
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      
-{% include heroboxoffice %}
-{% include tabsoffice %}
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+{% include heroboxhome %}
+{% include eventsearch %}
 <div class="clearfix" >
-<ul id="main" style="width:200px;margin-left:50px;margin-right:400px;"><h4>Export Resources</h4>
+<ul id="main" style="width:200px;margin-right:300px;"><h4>Export Resources</h4>
 
  
 <ul style="font-size: 18px;"> 
@@ -30,7 +25,7 @@ permalink:
 </div>
 
 <div class="clearfix" >
-<ul id="main" style="margin-right:200px;">{% include faqshome %}</ul>
+<ul id="main" style="margin-right:100px;">{% include faqshome %}</ul>
 <ul id="main" >
 {% include articles2 %}
 
@@ -47,6 +42,4 @@ permalink:
 
 </section>
 </div>
-{% include promo %}
-{% include socailbar %}
 {% include footer.html %}
