--- a/toolkit.html
+++ b/toolkit.html
@@ -4,12 +4,41 @@ permalink:
 ---
 
 {% include header.html %}
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-<center><h1>Market Research</h1></center>
-{% include heroboxwide %}
-<div class="clearfix">
-<ul id="main" style="width:750px">{% include tabs %} {% include faqs %} <a href="/office/faqs.html">View All FAQs</a></br>{% include events %} </br><a href="/office/events.html">View All Events</a> </br> {% include resources %}</br> {% include join %} </ul>
-<ul id="main" style="width:100px">Browse Articles By ...</br><a>evergreen</a></br><a>industry</a></br><a>topic</a></br><a>subtopic</a></br><a>trade region</a></ul>
- </div>
+{% include heroboxhome %}
+<div class="clearfix" >
+<ul id="main" style="width:200px;margin-right:300px;"><h4>Export Resources</h4>
+
+ 
+<ul style="font-size: 18px;"> 
+<li><a href="#">Exporters Resource Database</a></li>
+<li><a href="#">International Finance</a></li>
+<li><a href="#">Certificate of Origin</a></li>
+<li><a href="#">NAFTA</a></li>
+<li><a href="#">MN Tourism Destination</a></li>
+</ul>
+</ul>
+
+<ul id="main" ">
+{% include eventsoffice %}
+</ul>
+</div>
+
+<div class="clearfix" >
+<ul id="main" style="margin-right:100px;">{% include faqshome %}</ul>
+<ul id="main" >
+{% include articles2 %}
+
+
+</br></br>
+<h4>Our Global Network at Work</h4>
+
+<ul> 
+<li>Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
+<li>Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
+<li>See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
+</ul></ul>
+</div>
+
+</section>
+</div>
 {% include footer.html %}
