--- a/index.html
+++ b/index.html
@@ -21,4 +21,6 @@ title: homepage
 <ul id="main2" style="width:500px;margin-right: 150px;">{% include success %}</ul>
 <ul id="main2">{% include faqshome %}</ul>
 </div>
+</section>
+</div>
 {% include footer.html %}
