--- a/office.html
+++ b/office.html
@@ -3,6 +3,12 @@ Title: office
 permalink: 
 ---
 
+<style>
+#re li {
+color:#212121;
+}
+</style>
+
 {% include header.html %}
 
     <!-- MAIN CONTENT -->
@@ -13,7 +19,7 @@ permalink:
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 <div class="clearfix" >
-<ul id="main" style="width:200px;margin-left:50px;margin-right:375px;"><h4>Export Resources</h4>
+<ul id="main" style="margin-left:50px;margin-right:175px;"><h4>Export Resources</h4>
 
  
 <ul style="font-size: 18px;"> 
@@ -39,7 +45,7 @@ permalink:
 </br></br>
 <h4>Our Global Network at Work</h4>
 
-<ul> 
+<ul id="re"> 
 <li>Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
 <li>Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
 <li>See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
