--- a/office.html
+++ b/office.html
@@ -13,7 +13,8 @@ color:#212121;
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      
+      <section id="downloads">
+              <img  src="images/CS_logo color.png" ></section>
 {% include heroboxoffice %}
 {% include tabsoffice %}
     <div id="main_content_wrap" class="outer">
