--- a/office.html
+++ b/office.html
@@ -14,7 +14,7 @@ color:#212121;
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       
-{% include heroboxoffice %}
+{% include heroboxhome %}
 {% include tabsoffice %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
