--- a/office.html
+++ b/office.html
@@ -3,17 +3,12 @@ Title: office
 permalink: 
 ---
 
-<style>
-#re li {
-color:#212121;
-}
-</style>
 
 {% include header.html %}
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      
+{% include title %}      
 {% include heroboxhome %}
 {% include tabsoffice %}
     <div id="main_content_wrap" class="outer">
@@ -22,7 +17,7 @@ color:#212121;
 <ul id="main" style="margin-left:50px;margin-right:175px;"><h4>Export Resources</h4>
 
  
-<ul style="font-size: 18px;"> 
+<ul style="font-size: 24px;"> 
 <li><a href="#">Exporters Resource Database</a></li>
 <li><a href="#">International Finance</a></li>
 <li><a href="#">Certificate of Origin</a></li>
@@ -31,7 +26,7 @@ color:#212121;
 </ul>
 </ul>
 
-<ul id="main" ">
+<ul id="main" >
 {% include eventsoffice %}
 </ul>
 </div>
@@ -45,10 +40,10 @@ color:#212121;
 </br></br>
 <h4>Our Global Network at Work</h4>
 
-<ul id="re"> 
-<li>Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
-<li>Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
-<li>See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
+<ul > 
+<li style="color:#212121;">Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
+<li style="color:#212121;">Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
+<li style="color:#212121;">See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
 </ul></ul>
 </div>
 
