--- a/philadelphia.html
+++ b/philadelphia.html
@@ -11,7 +11,16 @@ permalink:
 <div class="clearfix">
 <ul id="main" style="width:600px; margin-right:100px;">
  <h2>Philadelphia</h2>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ <p>AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</br></br>
+
+JUNE 17-18, 2014</br></br>
+
+PHILADELPHIA, PA</br></br>
+
+As of April 5, 2014, new export requirements will be implemented that amend the regulations published in 2008. This export compliance seminar is a one day program, followed by half-day training, bringing together experts from the Department of Commerce to provide training on export filing requirements. All those involved in the export process such as U.S. Principal Parties in Interest including Manufactures and Suppliers, Freight Forwarders, Exporting Carriers, Consolidators, and U.S. Customs Brokers should plan to attend this valuable event.</br></br>
+
+For more information, please click here. <a style="color:#2da5da"href="http://www.export.gov/pennsylvania/philadelphia/upcominglocalevents/aes/index.asp">http://www.export.gov/pennsylvania/philadelphia/upcominglocalevents/aes/index.asp</a>
+</p>
 </ul>
 <ul id="main" style="width:250px"><h3>Related Articles</h3><p><a href="atlanta.html">Atlanta</p><p><a href="nashville.html">Nashville</p><p><a href="seattle.html">Seattle</p><p><a href="westchester.html">Westchester</p>
 
