--- a/search.html
+++ b/search.html
@@ -2,6 +2,23 @@
 Title: Search Toolkit 
 permalink: 
 ---
-{% include tabshome %}
+
+{% include header.html %}
+{% include herobox %}
+
+
+<div class="clearfix">
+<ul id="main4" style="width:725px;margin-right: 25px;">
+{% include mrl %} 
+{% include tabarticles %}</br>
+{% include faqs %}</br>
+<div style="float:left">{% include linklist %}</div><div style="float:right">{% include join %}</div>
+</ul>
+<ul id="main4" style="width:300px;">
+{% include browse %}
+</ul>
+</div>
+{% include footer.html %}
+
 
 
