--- a/toolkit.html
+++ b/toolkit.html
@@ -4,41 +4,18 @@ permalink:
 ---
 
 {% include header.html %}
-{% include heroboxhome %}
-<div class="clearfix" >
-<ul id="main" style="width:200px;margin-right:300px;"><h4>Export Resources</h4>
+{% include herobox %}
 
- 
-<ul style="font-size: 18px;"> 
-<li><a href="#">Exporters Resource Database</a></li>
-<li><a href="#">International Finance</a></li>
-<li><a href="#">Certificate of Origin</a></li>
-<li><a href="#">NAFTA</a></li>
-<li><a href="#">MN Tourism Destination</a></li>
+
+<div class="clearfix">
+<ul id="main4" style="width:725px;margin-right: 25px;">
+{% include tabarticles %}</br>
+{% include eventsearch %}</br>
+{% include faqs %}</br>
+<div style="float:left">{% include linklist %}</div><div style="float:right">{% include join %}</div>
 </ul>
+<ul id="main4" style="width:300px;">
+{% include browse %}
 </ul>
-
-<ul id="main" ">
-{% include eventsoffice %}
-</ul>
-</div>
-
-<div class="clearfix" >
-<ul id="main" style="margin-right:100px;">{% include faqshome %}</ul>
-<ul id="main" >
-{% include articles2 %}
-
-
-</br></br>
-<h4>Our Global Network at Work</h4>
-
-<ul> 
-<li>Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
-<li>Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
-<li>See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
-</ul></ul>
-</div>
-
-</section>
 </div>
 {% include footer.html %}
