--- a/nashville.html
+++ b/nashville.html
@@ -10,8 +10,7 @@ permalink:
       <section id="main_content" class="inner">
 <div class="clearfix">
 <ul id="main" style="width:600px; margin-right:100px;">
- <h2>Nashville</h2>
- <p>Protect Your IP Rights Abroad</br></br>
+<h2>Protect Your IP Rights Abroad</h2>
 
 March 28, 2013</br>
 Registration: 8:00 am</br>
@@ -42,7 +41,7 @@ Registration Fee: $59 (includes lunch)</br>
 To Register and Pay On-Line Click Here:  <a style="color:#2da5da"href="https://emenuapps.ita.doc.gov/ePublic/newWebinarRegistration.jsp?SmartCode=3Q5E">https://emenuapps.ita.doc.gov/ePublic/newWebinarRegistration.jsp?SmartCode=3Q5E</a></br>
 </p>
 </ul>
-<ul id="main" style="width:250px"><h3>Related Articles</h3><p><a href="atlanta.html">Atlanta</p><p><a href="philadelphia.html">Philadelphia</p><p><a href="seattle.html">Seattle</p><p><a href="westchester.html">Westchester</p>
+<ul id="main" style="width:250px"><h4>Related Articles</h4><p><a href="atlanta.html">Get certified training on AESPcLink</p><p><a href="philadelphia.html">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</p><p><a href="seattle.html">Export Control Training</p><p><a href="westchester.html">Export Compliance Training</p>
 
  </div>
  {% include footer.html %}
