--- a/search.html
+++ b/search.html
@@ -9,6 +9,7 @@ permalink:
 
 <div class="clearfix">
 <ul id="main4" style="width:725px;margin-right: 25px;">
+{% include mrlsearch %} 
 {% include tabarticles %}</br>
 {% include faqs %}</br>
 <div style="float:left">{% include linklist %}</div><div style="float:right">{% include join %}</div>
