--- a/westchester.html
+++ b/westchester.html
@@ -10,8 +10,7 @@ permalink:
       <section id="main_content" class="inner">
 <div class="clearfix">
 <ul id="main" style="width:600px; margin-right:100px;">
- <h2>Westchester</h2>
- <p>Export Compliance Training</br></br>
+ <h2>Export Compliance Training</h2>
 
 Presented by Allocca Enterprises in cooperation with the U.S. Commercial Service</br></br>
 
@@ -43,7 +42,7 @@ Allocca Enterprises, Inc.: Mike Allocca at (tel) 803-684-8012, e-mail: admin@all
 U.S. Commercial Service: Cathy Gibbons at (tel) 914-682-6712, e-mail: Cathy.Gibbons@trade.gov</br>
 </p>
 </ul>
-<ul id="main" style="width:250px"><h3>Related Articles</h3><p><a href="atlanta.html">Atlanta</p><p><a href="nashville.html">Nashville</p><p><a href="philadelphia.html">Philadelphia</p><p><a href="seattle.html">Seattle</p>
+<ul id="main" style="width:250px"><h4>Related Articles</h4><p><a href="atlanta.html">Get certified training on AESPcLink</p><p><a href="nashville.html">Protect Your IP Rights Abroad</p><p><a href="philadelphia.html">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</p><p><a href="seattle.html">Export Control Training</p>
 
  </div>
  {% include footer.html %}
