--- a/atlanta.html
+++ b/atlanta.html
@@ -10,9 +10,7 @@ permalink:
       <section id="main_content" class="inner">
 <div class="clearfix">
 <ul id="main" style="width:600px; margin-right:100px;">
- <h2>Atlanta</h2>
- 
-<p>Get certified training on AESPcLink</br></br>
+<h2>Get certified training on AESPcLink</h2>
 
 February 6, 2014: Workshop - Get certified training on AESPcLink! Learn how to successfully file your Electronic Export Information (EEI) via the Windows-based desktop PC component, AESPcLink. The workshop is half day and you can choose between two sessions: 8:00am - 11:30am or 1:00pm -4:30pm.</br></br>
 
@@ -84,7 +82,7 @@ Hannah Kamenetsky, Commercial Officer</br>
 Tel: (404)815-1596 or Hannah.kamenetsky@trade.gov</br>
 </p>
 </ul>
-<ul id="main" style="width:250px"><h3>Related Articles</h3><p><a href="nashville.html">Nashville</p><p><a href="philadelphia.html">Philadelphia</p><p><a href="seattle.html">Seattle</p><p><a href="westchester.html">Westchester</p>
+<ul id="main" style="width:250px"><h4>Related Articles</h4><p><a href="nashville.html">Protect Your IP Rights Abroad</p><p><a href="philadelphia.html">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</p><p><a href="seattle.html">Export Control Training</p><p><a href="westchester.html">Export Compliance Training</p>
 
  </div>
  {% include footer.html %}
