--- a/office.html
+++ b/office.html
@@ -50,5 +50,5 @@ permalink:
 </section>
 </div>
 {% include promo %}
-{% include socailbar %}
+{% include socialoffice %}
 {% include footer.html %}
