--- a/atlanta.html
+++ b/atlanta.html
@@ -8,8 +8,7 @@ permalink:
 {% include header.html %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<div class="clearfix">
-<ul id="main" style="width:600px; margin-right:100px;">
+<div>
 <h2>Get certified training on AESPcLink</h2>
 
 February 6, 2014: Workshop - Get certified training on AESPcLink! Learn how to successfully file your Electronic Export Information (EEI) via the Windows-based desktop PC component, AESPcLink. The workshop is half day and you can choose between two sessions: 8:00am - 11:30am or 1:00pm -4:30pm.</br></br>
@@ -81,10 +80,14 @@ Questions contact:</br>
 Hannah Kamenetsky, Commercial Officer</br>
 Tel: (404)815-1596 or Hannah.kamenetsky@trade.gov</br>
 </p>
-</ul>
-<ul id="main" style="width:250px"><h4>Related Articles</h4><p><a href="nashville.html">Protect Your IP Rights Abroad</p><p><a href="philadelphia.html">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</p><p><a href="seattle.html">Export Control Training</p><p><a href="westchester.html">Export Compliance Training</p>
-
  </div>
+ 
+ <ul class="tags">
+  <li><a href="nashville.html" class="tag">Protect Your IP Rights Abroad</a></li>
+  <li><a href="philadelphia.html" class="tag">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</a></li>
+  <li><a href="seattle.html" class="tag">Export Control Training</a></li>
+  <li><a href="westchester.html" class="tag">Export Compliance Training</a></li>
+</ul>
  {% include footer.html %}
  
  
