--- a/seattle.html
+++ b/seattle.html
@@ -8,8 +8,8 @@ permalink:
 {% include header.html %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<div class="clearfix">
-<ul id="main" style="width:600px; margin-right:100px;">
+<div>
+
  <h2>Export Control Training</h2>
 
 Three opportunities for export control training in WA state this year!</br></br>
@@ -22,10 +22,13 @@ Complying with U.S. Export Controls:  This two-day program will be held June 12-
 
 Export Controls:  Awareness and Application:  Save the date!  This year we return to a summer program, July 9-10 at Microsoft headquarters. Get the latest updates on export control reform, and discuss recent legal updates and best practices in export compliance. Discover through actual case examples why these export controls are so important and how our nation’s adversaries attempt to violate them. This fast-paced seminar is geared toward both new and experienced export control professionals.</br></br>
 </p>
+</div>
+ <ul class="tags">
+  <li><a href="atlanta.html" class="tag">Get certified training on AESPcLink</a></li>
+  <li><a href="nashville.html" class="tag">Protect Your IP Rights Abroad</a></li>
+  <li><a href="philadelphia.html" class="tag">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</a></li>
+  <li><a href="westchester.html" class="tag">Export Compliance Training</a></li>
 </ul>
-<ul id="main" style="width:250px"><h4>Related Articles</h4><p><a href="atlanta.html">Get certified training on AESPcLink</p><p><a href="nashville.html">Protect Your IP Rights Abroad</p><p><a href="philadelphia.html">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</p><p><a href="westchester.html">Export Compliance Training</p>
-
- </div>
  {% include footer.html %}
  
  
