--- a/toolkit.html
+++ b/toolkit.html
@@ -5,17 +5,8 @@ permalink:
 
 {% include header.html %}
 {% include herobox %}
-
-
-<div class="clearfix">
-<ul id="main4" style="width:725px;margin-right: 25px;">
-{% include tabarticles %}</br>
-{% include eventsearch %}</br>
-{% include faqs %}</br>
-<div style="float:left">{% include linklist %}</div><div style="float:right">{% include join %}</div>
-</ul>
-<ul id="main4" style="width:300px;">
-{% include browse %}
-</ul>
-</div>
+{% include articles2 %}
+{% include eventshome %}
+{% include faqshome %}
+{% include linklist %}{% include join %}
 {% include footer.html %}
