--- a/video.html
+++ b/video.html
@@ -7,6 +7,5 @@ permalink:
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
       
-      <h3>Training Videos & Webinars</h3>
-{% include thumb %}
+<iframe scrolling="no" marginheight="0" frameborder="0" width="975" src="http://ytchannelembed.com/gallery.php?vids=30&amp;user=TradeGov&amp;row=6&amp;width=150&amp;hd=1&amp;margin_right=15&amp;desc=100&amp;desc_color=9E9E9E&amp;title=30&amp;title_color=000000&amp;views=1&amp;likes=1&amp;dislikes=1&amp;fav=1&amp;playlist=" style="height: 1357px;"></iframe>
 {% include footer.html %}
