--- a/nashville.html
+++ b/nashville.html
@@ -8,8 +8,8 @@ permalink:
 {% include header.html %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<div class="clearfix">
-<ul id="main" style="width:600px; margin-right:100px;">
+<div>
+
 <h2>Protect Your IP Rights Abroad</h2>
 
 March 28, 2013</br>
@@ -40,10 +40,13 @@ Registration Fee: $59 (includes lunch)</br>
 
 To Register and Pay On-Line Click Here:  <a style="color:#2da5da"href="https://emenuapps.ita.doc.gov/ePublic/newWebinarRegistration.jsp?SmartCode=3Q5E">https://emenuapps.ita.doc.gov/ePublic/newWebinarRegistration.jsp?SmartCode=3Q5E</a></br>
 </p>
-</ul>
-<ul id="main" style="width:250px"><h4>Related Articles</h4><p><a href="atlanta.html">Get certified training on AESPcLink</p><p><a href="philadelphia.html">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</p><p><a href="seattle.html">Export Control Training</p><p><a href="westchester.html">Export Compliance Training</p>
-
  </div>
+  <ul class="tags">
+  <li><a href="atlanta.html" class="tag">Get certified training on AESPcLink</a></li>
+  <li><a href="philadelphia.html" class="tag">AUTOMATED EXPORT SYSTEM (AES) SEMINAR AND WORKSHOP</a></li>
+  <li><a href="seattle.html" class="tag">Export Control Training</a></li>
+  <li><a href="westchester.html" class="tag">Export Compliance Training</a></li>
+</ul>
  {% include footer.html %}
  
  
