--- a/searchwidgets.html
+++ b/searchwidgets.html
@@ -5,8 +5,4 @@ permalink:
 
 
 
-{% include header.html %}
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-      {% include officesearch %}
-{% include footer.html %}
+    {% include heroboxwide %}
