--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 
-title: homepage
+title: Trade.gov/Export
 ---
 
     
@@ -10,7 +10,7 @@ title: homepage
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 <div class="clearfix">
-<ul id="main4" style="width:725px;margin-right: 25px;">
+<ul id="main4" style="width:725px;margin-right: 25px; background:#">
 {% include eventshome %}
 </ul>
 <ul id="main4" style="width:300px;">
