--- a/toolkit.html
+++ b/toolkit.html
@@ -2,7 +2,7 @@
 Title: Toolkit 
 permalink: 
 ---
-
+<title>Toolkit</title>
 {% include header.html %}
 {% include herobox %}
 <div class="clearfix">
