--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Trade.gov/Export
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 <div class="clearfix">
-<ul id="main4" style="width:725px;margin-right: 25px; background:#">
+<ul id="main4" style="width:550px;margin-right: 100px; ">
 {% include eventshome %}
 </ul>
 <ul id="main4" style="width:300px;">
