--- a/office.html
+++ b/office.html
@@ -11,42 +11,43 @@ title: Field Office
     <div id="main_content_wrap" class="outer">
     
 {% include title %}      
-{% include heroboxhome %}
+{% include heroboxoffice %}
 {% include tabsoffice %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<div class="clearfix" >
-<ul id="main" style="margin-left:50px;margin-right:175px;"><h4>Export Resources</h4>
+<div class="clearfix">
+<ul id="main4" style="width:400px;margin-right:125px;">
+{% include articles2 %}
+</ul>
+<ul id="main4" style="width:550px; ">
+{% include eventshome %}
+</ul>
+
+</div>
+<div class="clearfix" style="margin-bottom:25px;">
+<ul id="main2" style="width:500px;margin-right: 100px;"><h4>Export Resources</h4>
 
  
-<ul style="font-size: 24px;"> 
+<ul > 
 <li><a href="#">Exporters Resource Database</a></li>
 <li><a href="#">International Finance</a></li>
 <li><a href="#">Certificate of Origin</a></li>
 <li><a href="#">NAFTA</a></li>
 <li><a href="#">MN Tourism Destination</a></li>
 </ul>
-</ul>
-
-<ul id="main" >
-{% include eventsoffice %}
-</ul>
-</div>
-
-<div class="clearfix" >
-<ul id="main" style="margin-right:200px;">{% include faqshome %}</ul>
-<ul id="main" >
-{% include articles2 %}
-
-
-</br></br>
+</br>
 <h4>Our Global Network at Work</h4>
 
 <ul > 
 <li style="color:#212121;">Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
 <li style="color:#212121;">Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
 <li style="color:#212121;">See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
-</ul></ul>
+</ul>
+</br>
+{% include join %}
+
+</ul>
+<ul id="main2">{% include faqshome %}</ul>
 </div>
 
 </section>
