--- a/office.html
+++ b/office.html
@@ -17,7 +17,7 @@ title: Field Office
       <section id="main_content" class="inner">
 <div class="clearfix">
 <ul id="main4" style="width:400px;margin-right:125px;">
-{% include articles2 %}
+{% include articles3 %}
 </ul>
 <ul id="main4" style="width:550px; ">
 {% include eventshome %}
@@ -29,13 +29,16 @@ title: Field Office
 
  
 <ul > 
-<li><a href="#">Exporters Resource Database</a></li>
-<li><a href="#">International Finance</a></li>
-<li><a href="#">Certificate of Origin</a></li>
-<li><a href="#">NAFTA</a></li>
-<li><a href="#">MN Tourism Destination</a></li>
+<li><a href="#">Export Basics</a></li>
+<li><a href="#">Financing and Insuring Export Transactions</a></li>
+<li><a href="#">Export Compliance and Regulations</a></li>
+<li><a href="#">International Market Research</a></li>
+<li><a href="#">Find and Engage Trading Partners</a></li>
+<li><a href="#">Export Forms and Tools</a></li>
 </ul>
 </br>
+<a  style="display:inline-block; padding:5px;background-color:#d9d9d9;"href="#"id="title" href="#">View All Export Resources</a>
+</br></br>
 <h4>Our Global Network at Work</h4>
 
 <ul > 
@@ -43,8 +46,7 @@ title: Field Office
 <li style="color:#212121;">Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
 <li style="color:#212121;">See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
 </ul>
-</br>
-{% include join %}
+
 
 </ul>
 <ul id="main2">{% include faqshome %}</ul>
