--- a/articletemplate.html
+++ b/articletemplate.html
@@ -51,6 +51,7 @@ permalink:
    </div>
    </div>
 	  </br>
+	  <h5>Related Tags</h5>
 	<div class="tags">
 	<dd class="industry" id="tag"></dd>   
 	<dd class="topic" id="tag"></dd>   
