--- a/searchtoolkit.html
+++ b/searchtoolkit.html
@@ -4,8 +4,8 @@ permalink:
 ---
 
 {% include header.html %}
-{% include herobox %}
-
+{% include herobox2 %}
+{% include mrlsearch %}
 <div class="clearfix">
 <ul id="main4" style="width:400px;margin-right:125px;">
 {% include articles3 %}
@@ -45,4 +45,3 @@ permalink:
 
 
 {% include footer.html %}
-
