--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Trade.gov/Export
 </ul>
 </div>
 <div class="clearfix" style="margin-bottom:25px;">
-<ul id="main2" style="width:500px;margin-right: 150px;">{% include success %} </br><a style="display:inline-block; padding:5px;background-color:#d9d9d9;"href="#">View All Success Stories</a></ul>
+<ul id="main2" style="width:500px;margin-right: 150px;">{% include success %} </br><a style="display:inline-block; padding:5px;background-color:#d9d9d9;"href="events.html">View All Success Stories</a></ul>
 <ul id="main2">{% include faqshome %}</ul>
 </div>
 </section>
