--- a/events.html
+++ b/events.html
@@ -6,5 +6,6 @@ permalink:
 {% include header.html %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+      <h4>Latest Events</h4></br>
 {% include allevents %}
 {% include footer.html %}
