--- a/guide.html
+++ b/guide.html
@@ -34,11 +34,11 @@ permalink:
 
 		<div id="header">
 
-			<div id="brand">
+			<a href="/office"><div id="brand">
 
 				
 
-			</div>
+			</div></a>
 
 			<h1>Export Guide</h1>
 
