--- a/guide.html
+++ b/guide.html
@@ -4,7 +4,9 @@ permalink:
 
 ---
 
-
+{% include header.html %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -48,7 +50,7 @@ permalink:
 
 		<div id="cpanel">
 
-			<div id="nav">
+			<div id="nav2">
 
 				<ul class="accordion">
 
@@ -103,3 +105,8 @@ The following overviews contain information on common directives. \r\n \u0026lt;
 </body>
 
 </html>
+
+</section>
+</div>
+
+{% include footer.html %}
