--- a/search.html
+++ b/search.html
@@ -3,22 +3,8 @@ Title: Search Toolkit
 permalink: 
 ---
 
-{% include header.html %}
-{% include herobox %}
+{% include searchtool %}
 
-
-<div class="clearfix">
-<ul id="main4" style="width:725px;margin-right: 25px;">
-{% include mrlsearch %} 
-{% include tabarticles %}</br>
-{% include faqs %}</br>
-<div style="float:left">{% include linklist %}</div><div style="float:right">{% include join %}</div>
-</ul>
-<ul id="main4" style="width:300px;">
-{% include browse %}
-</ul>
-</div>
-{% include footer.html %}
 
 
 
