--- a/searchtoolkit.html
+++ b/searchtoolkit.html
@@ -5,32 +5,22 @@ permalink:
 
 {% include header.html %}
 {% include herobox2 %}
-{% include mrlsearch %}
 <div class="clearfix">
-<ul id="main4" style="width:400px;margin-right:125px;">
-{% include articles3 %}
-</ul>
-<ul id="main4" style="width:550px; ">
-{% include eventshome %}
-</ul>
+<script src="http://ajsingh273.github.io/widgets/javascripts/articles-script.js" type="text/javascript"> </script>
+<div id="articles-container"> </div>
+<script src="http://ajsingh273.github.io/widgets/javascripts/article-script.js" type="text/javascript"> </script>
+<div id="article-container"> </div>
 
-</div>
-<div class="clearfix" style="margin-bottom:25px;">
-<ul id="main2" style="width:500px;margin-right: 100px;">
-<h4>Our Global Network at Work</h4>
 
-<ul > 
-<li style="color:#212121;">Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
-<li style="color:#212121;">Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
-<li style="color:#212121;">See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
-</ul>
-</br></br></br>
-{% include join %}
+<script src="http://ajsingh273.github.io/widgets/javascripts/reports-script.js" type="text/javascript"> </script>
+<div id="reports-container"> </div>
+<script src="http://ajsingh273.github.io/widgets/javascripts/mrr-script.js" type="text/javascript"> </script>
+<div id="mrr-container"> </div>
 
-</ul>
-<ul id="main2">{% include faqshome %}</ul>
-</div>
-
+<script src="http://ajsingh273.github.io/widgets/javascripts/events-script.js" type="text/javascript"> </script>
+<div id="events-container"> </div>
+<script src="http://ajsingh273.github.io/widgets/javascripts/trade-events-list-script.js" type="text/javascript"> </script>
+<div id="trade-events-list-container"> </div>
 </section>
 </div>
 
