--- a/toolkit.html
+++ b/toolkit.html
@@ -9,40 +9,13 @@ permalink:
 <div class="clearfix">
 <ul id="main4" style="width:400px;margin-right:125px;">
 {% include articles3 %}
+{% include faqshome %}
 </ul>
 <ul id="main4" style="width:550px; ">
 {% include eventshome %}
 </ul>
 
 </div>
-<div class="clearfix" style="margin-bottom:25px;">
-<ul id="main2" style="width:500px;margin-right: 100px;"><h4>Export Resources</h4>
-
- 
-<ul > 
-<li><a href="#">Export Basics</a></li>
-<li><a href="#">Financing and Insuring Export Transactions</a></li>
-<li><a href="#">Export Compliance and Regulations</a></li>
-<li><a href="#">International Market Research</a></li>
-<li><a href="#">Find and Engage Trading Partners</a></li>
-<li><a href="#">Export Forms and Tools</a></li>
-</ul>
-</br>
-<a  style="display:inline-block; padding:5px;background-color:#d9d9d9;"href="#"id="title" href="#">View All Export Resources</a>
-</br></br>
-<h4>Our Global Network at Work</h4>
-
-<ul > 
-<li style="color:#212121;">Doing Business in Africa = <a href="#">Learn more about the campaign</a></li>
-<li style="color:#212121;">Sign Up for an <a href="#">Up Coming Trade Mission</a></li>
-<li style="color:#212121;">See the list of Newly Announced <a href="#">2014 International Buyer Program Trade Shows</a></li>
-</ul>
-
-
-</ul>
-<ul id="main2">{% include faqshome %}</ul>
-</div>
-
 
 {% include footer.html %}
 
