--- a/signin.html
+++ b/signin.html
@@ -3,8 +3,7 @@ Title: Signin
 permalink: 
 ---
 
-{% include header.html %}
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-{% include sign %}
-{% include footer.html %}
+
+<script src="http://internationaltradeadministration.github.io/widgets/javascripts/mrr-script.js" type="text/javascript"> </script>
+<div id="mrr-container"> </div>
+
